tests/ui/issues/issue-40845.rs
trait T { m!(); } //~ ERROR cannot find macro `m`

struct S;
impl S { m!(); } //~ ERROR cannot find macro `m`

fn main() {}
